$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-36 (opened September 25, 2013)

	* opened with the release of vegan 2.0-9.
	
Version 2.1-35 (closed September 25, 2013)

	* ordilabel: colour arguments ('col', 'fill', 'borderä) can now be
	vectors and will be recycled if needed. May need care if used with
	'select', but should work with 'priority'. This was needed for a
	function under development and testing: when labelling over lines,
	it may be nice if the border has the same colour as the line
	covered.

	* MDSrotate: can now rotate a solution to more than one vector,
	provided that the number of dimensions is higher than the number
	of vectors. Because fitted vectors usually are correlated, only
	the first vector is aligned to dimension 1, but second vector and
	further are oblique to the corresponding axis. In any case they
	will have zero correlation to all subsequent dimensions.

	* simulate.rda, simulate.cca: gained argument 'correlated' for
	using covariances of species in generating correlated multivariate
	normal residuals in parametric simulations. The covariances are
	estimated from the residual ordination of species. The argument
	defaults FALSE which implements the old parametric simulation
	where each species is simulated independently.  The argument has
	no effect in capscale() which stores no information on species.
	
Version 2.1-34 (closed September 5, 2013)

	* DESCRIPTION: dependent on R >= 2.14.0.
	
	* DESCRIPTION, vignettes: R 3.0.2-to-be checks with --as-cran
	requires (with a NOTE) the vignettes source files (Rnw) to be in
	vignettes/ directory.  Because Makefile is not executed in
	inst/doc if vignettes/ directory is present, all other sources had
	to be moved to vignettes/ as well with vignettes/.install_extras
	to move those to inst/doc after building. This also made
	/.Rinstignore unnecessary. The vignettes directory was introduced
	and made recommended in R 2.14.0 so that the this version of vegan